kubernetes/generatedManifests/test/infrastructure/linkerd-viz/1-manifest/policy.linkerd.io_v1alpha1-authorizationpolicy-linkerd-viz-metrics-api.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"policy.linkerd.io/v1alpha1","kind":"AuthorizationPolicy","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.12.1"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"metrics-api","linkerd.io/extension":"viz"},"name":"metrics-api","namespace":"linkerd-viz"},"spec":{"requiredAuthenticationRefs":[{"group":"policy.linkerd.io","kind":"MeshTLSAuthentication","name":"metrics-api-web"}],"targetRef":{"group":"policy.linkerd.io","kind":"Server","name [...]
    linkerd.io/created-by: linkerd/helm stable-2.12.1
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: metrics-api
    linkerd.io/extension: viz
  name: metrics-api
  namespace: linkerd-viz
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: metrics-api-web
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: metrics-api
